# pytcpr

./: README.md  pyproject.toml
examples/: common.py  toxicity-detection.py
pytcpr/: client.py  mqueue.py  parsing.py  protocol.py
pytcpr/services/: logging.py
src/pytcpr/: client.py  events.py  mqueue.py  parsing.py  protocol.py  router.py
src/pytcpr/services/: logging.py
