[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytcpr"
version = "0.0.1"
authors = [
  { name="sdelang", email="sdelang@sdelang.fr" },
]
description = "Asynchronous Python tooling for King Arthur's Gold TCPR clients"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AsuMagic/pytcpr"
"Bug Tracker" = "https://github.com/AsuMagic/pytcpr/issues"

